fixed image align

--- a/source/stylesheets/partials/_blog.scss
+++ b/source/stylesheets/partials/_blog.scss
@@ -20,6 +20,7 @@
   }
   img {
     margin-right: 20px;
+    vertical-align: middle;
   }
   time {
     display: block;
